--- a/battle.css
+++ b/battle.css
@@ -2,8 +2,18 @@
   margin: 0px;
   padding: 0px;
 }
+body {
+  background-color: darkgrey;
+}
 h1 {
-  color: red;
+  color: lightgreen;
+  font-size: 300%;
+  margin: 12px;
+}
+section {
+  color: forestgreen;
+  font-size: 175%;
+  text-align: center;
 }
 #battleTable {
   border: 2px solid black;
@@ -17,7 +27,11 @@ tr {
 }
 td {
   border: 2px solid black;
+  background-color: lightblue;
 }
 .miss {
-  background-color: darkgrey;
+  background-color: white;
+}
+.hit {
+  background-color: red;
 }
