--- a/battle.css
+++ b/battle.css
@@ -6,11 +6,12 @@ body {
   background-color: darkgrey;
 }
 h1 {
-  font-family: 'Jura', sans-serif;
+  font-family: 'Black Ops One', cursive;
   color: lightgreen;
-  font-size: 300%;
+  font-size: 500%;
   margin: 12px;
   text-shadow: 3px 3px forestgreen;
+  -webkit-text-stroke: 1px black;
 }
 section {
   color: lightgreen;
@@ -36,6 +37,12 @@ td {
   border: 2px solid black;
   background-color: lightblue;
   box-shadow: 1px 1px 1px black;
+ -webkit-transition: background-color 1s; /* Safari */
+  transition: background-color 1s;
+}
+td:hover {
+  background-color: white;
+
 }
 .miss {
   background-color: white;
